# ondycal-python

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  web.dockerfile
.github/worflows/: auto-assign.yml
alembic/: env.py
alembic/versions/: 179fde6212d5_formula_models.py  7ce9ee3743ad_change_constraint_type_to_nullable.py  884e9f397907_add_unique_constraint_to_variable_model.py
app/: main.py
app/_core/: config.py
app/_helpers/: formula.py
app/db/: init_db.py  session.py
app/db/models/: __init__.py  formula.py
app/domains/: __init__.py  formula.py
app/models/: __init__.py  formula.py
app/modules/: __init__.py  common.py  formula.py  variable.py
app/routes/: __init__.py  deps.py  formula.py  variable.py
app/tests/domains/: test_formula.py
app/tests/models/: test_formula.py
app/utils/: formula.py
