[tool.poetry]
name = "ondycal"
version = "0.1.0"
description = "Online Dynamic Calculator"
authors = ["Mojtaba Amirabadian <mamirabadian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.11.1"
annotated-types = "^0.5.0"
anyio = "^3.7.1"
certifi = "^2023.7.22"
click = "^8.1.6"
exceptiongroup = "^1.1.2"
fastapi = "^0.100.0"
greenlet = "^2.0.2"
h11 = "^0.14.0"
httpcore = "^0.17.3"
httptools = "^0.6.0"
httpx = "^0.24.1"
idna = "^3.4"
iniconfig = "^2.0.0"
mako = "^1.2.4"
markupsafe = "^2.1.3"
packaging = "^23.1"
pluggy = "^1.2.0"
pydantic = "^2.0.3"
pydantic-core = "^2.3.0"
pydantic-settings = "^2.0.2"
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
sniffio = "^1.3.0"
sqlalchemy = "^2.0.19"
starlette = "^0.27.0"
tomli = "^2.0.1"
typing-extensions = "^4.7.1"
uvicorn = {version = "^0.23.1", extras = ["standard"]}
uvloop = "^0.17.0"
watchfiles = "^0.19.0"
websockets = "^11.0.3"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pre-commit = "^3.3.3"
ruff = "^0.0.280"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
